--- a/trab3/cliente/Cliente Acionista.ipynb
+++ b/trab3/cliente/Cliente Acionista.ipynb
@@ -6,7 +6,24 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Digite \"comandos\" para saber os comandos disponíveis ou \"clear\" para limpar a saída\n",
+      "Digite o comando: comandos\n",
+      "Comandos disponíveis:\n",
+      " - Compra de ações   ->  compra:seuID:nomeAção:Preço\n",
+      " - Venda de ações    ->  venda:seuID:nomeAção:Preço\n",
+      " - Consulta de preço ->  consulta:seuID:nomeAção\n",
+      " - Checar status     ->  check:idTransação\n",
+      "Digite o comando: consulta:123:exxon\n",
+      "http://localhost:8080/servidor/webresources/helloworld/consulta:123:exxon\n",
+      "exxon tem preco de 56.64617\n"
+     ]
+    }
+   ],
    "source": [
     "import requests\n",
     "from IPython.display import clear_output\n",
@@ -32,24 +49,24 @@
     "        elif skip1c == 0 and skip2c == 0 and skip3c == 0:\n",
     "            ret += i\n",
     "    return ret\n",
-    "    \n",
+    "\n",
+    "print('Digite \"comandos\" para saber os comandos disponíveis ou \"clear\" para limpar a saída')\n",
     "while(1):\n",
     "    entrada = input(\"Digite o comando: \")\n",
-    "    checkentry = entrada.split(\":\")\n",
-    "    if(checkentry[0] != 'consulta' or checkentry[0] != 'compra' or checkentry[0] != 'venda' or checkentry[0] != 'check'):\n",
-    "        if(entrada=='comandos'):\n",
-    "            print('Comandos disponíveis:')\n",
-    "            print(' - Compra de ações   ->  compra:seuID:nomeAção:Preço')\n",
-    "            print(' - Venda de ações    ->  venda:seuID:nomeAção:Preço')\n",
-    "            print(' - Consulta de preço ->  consulta:seuID:nomeAção')\n",
-    "            print(' - Checar status     ->  check')\n",
-    "    else:\n",
+    "    if(entrada !='comandos' and entrada != 'clear'):\n",
     "        saida = 'http://localhost:8080/servidor/webresources/helloworld/' + entrada\n",
     "        r = requests.get(saida)\n",
     "        print(saida)\n",
     "        print(rmv_str(r.text))\n",
+    "    if(entrada=='comandos'):\n",
+    "        print('Comandos disponíveis:')\n",
+    "        print(' - Compra de ações   ->  compra:seuID:nomeAção:Preço')\n",
+    "        print(' - Venda de ações    ->  venda:seuID:nomeAção:Preço')\n",
+    "        print(' - Consulta de preço ->  consulta:seuID:nomeAção')\n",
+    "        print(' - Checar status     ->  check:idTransação')\n",
     "    if(entrada=='clear'):\n",
-    "        clear_output()"
+    "        clear_output()\n",
+    "        print('Digite \"comandos\" para saber os comandos disponíveis ou \"clear\" para limpar a saída')"
    ]
   },
   {
