--- a/trab3/cliente/Cliente Acionista.ipynb
+++ b/trab3/cliente/Cliente Acionista.ipynb
@@ -12,15 +12,42 @@
      "output_type": "stream",
      "text": [
       "Digite \"comandos\" para saber os comandos disponíveis ou \"clear\" para limpar a saída\n",
-      "Digite o comando: comandos\n",
-      "Comandos disponíveis:\n",
-      " - Compra de ações   ->  compra:seuID:nomeAção:Preço\n",
-      " - Venda de ações    ->  venda:seuID:nomeAção:Preço\n",
-      " - Consulta de preço ->  consulta:seuID:nomeAção\n",
-      " - Checar status     ->  check:idTransação\n",
-      "Digite o comando: consulta:123:exxon\n",
-      "http://localhost:8080/servidor/webresources/helloworld/consulta:123:exxon\n",
-      "exxon tem preco de 56.64617\n"
+      "Digite o comando: consulta:2:exxon\n",
+      "http://localhost:8080/servidor/webresources/helloworld/consulta:2:exxon\n",
+      "exxon tem preco de 62.985435\n",
+      "Digite o comando: consulta:2:exxon\n",
+      "http://localhost:8080/servidor/webresources/helloworld/consulta:2:exxon\n",
+      "exxon tem preco de 62.985435\n",
+      "Digite o comando: consulta:2:exxon\n",
+      "http://localhost:8080/servidor/webresources/helloworld/consulta:2:exxon\n",
+      "exxon tem preco de 62.985435\n",
+      "Digite o comando: consulta:2:exxon\n",
+      "http://localhost:8080/servidor/webresources/helloworld/consulta:2:exxon\n",
+      "exxon tem preco de 38.483055\n",
+      "Digite o comando: compra:123:exxon:10\n",
+      "http://localhost:8080/servidor/webresources/helloworld/compra:123:exxon:10\n",
+      "1:isso Ã© uma compra, bem vindo\n",
+      "Digite o comando: compra:123:exxon:2\n",
+      "http://localhost:8080/servidor/webresources/helloworld/compra:123:exxon:2\n",
+      "2:isso Ã© uma compra, bem vindo\n",
+      "Digite o comando: check:123:1\n",
+      "http://localhost:8080/servidor/webresources/helloworld/check:123:1\n",
+      "Essa transaÃ§Ã£o nÃ£o existe. check de estado da transacao, bem vindo\n",
+      "Digite o comando: check:1\n",
+      "http://localhost:8080/servidor/webresources/helloworld/check:1\n",
+      "null\n",
+      "Digite o comando: check:123:2\n",
+      "http://localhost:8080/servidor/webresources/helloworld/check:123:2\n",
+      "Essa transaÃ§Ã£o nÃ£o existe. check de estado da transacao, bem vindo\n",
+      "Digite o comando: check:1\n",
+      "http://localhost:8080/servidor/webresources/helloworld/check:1\n",
+      "null\n",
+      "Digite o comando: check:123:!\n",
+      "http://localhost:8080/servidor/webresources/helloworld/check:123:!\n",
+      "Essa transaÃ§Ã£o nÃ£o existe. check de estado da transacao, bem vindo\n",
+      "Digite o comando: check:1\n",
+      "http://localhost:8080/servidor/webresources/helloworld/check:1\n",
+      "null\n"
      ]
     }
    ],
