--- a/trab3/cliente/Cliente Acionista.ipynb
+++ b/trab3/cliente/Cliente Acionista.ipynb
@@ -11,43 +11,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Digite \"comandos\" para saber os comandos disponíveis ou \"clear\" para limpar a saída\n",
-      "Digite o comando: consulta:2:exxon\n",
-      "http://localhost:8080/servidor/webresources/helloworld/consulta:2:exxon\n",
-      "exxon tem preco de 62.985435\n",
-      "Digite o comando: consulta:2:exxon\n",
-      "http://localhost:8080/servidor/webresources/helloworld/consulta:2:exxon\n",
-      "exxon tem preco de 62.985435\n",
-      "Digite o comando: consulta:2:exxon\n",
-      "http://localhost:8080/servidor/webresources/helloworld/consulta:2:exxon\n",
-      "exxon tem preco de 62.985435\n",
-      "Digite o comando: consulta:2:exxon\n",
-      "http://localhost:8080/servidor/webresources/helloworld/consulta:2:exxon\n",
-      "exxon tem preco de 38.483055\n",
-      "Digite o comando: compra:123:exxon:10\n",
-      "http://localhost:8080/servidor/webresources/helloworld/compra:123:exxon:10\n",
-      "1:isso Ã© uma compra, bem vindo\n",
-      "Digite o comando: compra:123:exxon:2\n",
-      "http://localhost:8080/servidor/webresources/helloworld/compra:123:exxon:2\n",
-      "2:isso Ã© uma compra, bem vindo\n",
-      "Digite o comando: check:123:1\n",
-      "http://localhost:8080/servidor/webresources/helloworld/check:123:1\n",
-      "Essa transaÃ§Ã£o nÃ£o existe. check de estado da transacao, bem vindo\n",
-      "Digite o comando: check:1\n",
-      "http://localhost:8080/servidor/webresources/helloworld/check:1\n",
-      "null\n",
-      "Digite o comando: check:123:2\n",
-      "http://localhost:8080/servidor/webresources/helloworld/check:123:2\n",
-      "Essa transaÃ§Ã£o nÃ£o existe. check de estado da transacao, bem vindo\n",
-      "Digite o comando: check:1\n",
-      "http://localhost:8080/servidor/webresources/helloworld/check:1\n",
-      "null\n",
-      "Digite o comando: check:123:!\n",
-      "http://localhost:8080/servidor/webresources/helloworld/check:123:!\n",
-      "Essa transaÃ§Ã£o nÃ£o existe. check de estado da transacao, bem vindo\n",
-      "Digite o comando: check:1\n",
-      "http://localhost:8080/servidor/webresources/helloworld/check:1\n",
-      "null\n"
+      "Digite \"comandos\" para saber os comandos disponíveis ou \"clear\" para limpar a saída\n"
      ]
     }
    ],
@@ -83,7 +47,7 @@
     "    if(entrada !='comandos' and entrada != 'clear'):\n",
     "        saida = 'http://localhost:8080/servidor/webresources/helloworld/' + entrada\n",
     "        r = requests.get(saida)\n",
-    "        print(saida)\n",
+    "        #print(saida)\n",
     "        print(rmv_str(r.text))\n",
     "    if(entrada=='comandos'):\n",
     "        print('Comandos disponíveis:')\n",
